--- a/workshop01/pom.xml
+++ b/workshop01/pom.xml
@@ -123,6 +123,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
